# kaggle-notebooks

./: .env.example  mise.toml  pyproject.toml
src/kaggle_notebooks/: __init__.py
src/kaggle_notebooks/kernel_environment/: check_env.ipynb  main.py
