[project]
name = "kaggle-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "y-chiba1008", email = "chiba8e3@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "kaggle>=2.2.2",
]

[project.scripts]
kaggle-notebooks = "kaggle_notebooks:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
